@@ -262,7 +262,7 @@ class MonerisRemoteTest < Test::Unit::TestCase
     assert_success response
     assert_equal(response.avs_result, {
         'code' => 'A',
-        'message' => 'Street address matches, but 5-digit and 9-digit postal code do not match.',
+        'message' => 'Street address matches, but postal code does not match.',
         'street_match' => 'Y',
         'postal_match' => 'N'
     })
